--- a/asw-aurelia/client/index.html
+++ b/asw-aurelia/client/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Aurelia</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  </head>
 
-  <body aurelia-app>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <title>Aurelia</title>
+    <link rel="stylesheet" href="plugins/asw-aurelia/css/styles.css">
+</head>
+
+<body aurelia-app="main">
     <script src="jspm_packages/system.js"></script>
     <script src="config.js"></script>
     <script>
-      SystemJS.import('aurelia-bootstrapper');
+        SystemJS.import('aurelia-bootstrapper');
     </script>
-  </body>
+</body>
+
 </html>
